--- a/Source/Strive/Strive.Client/Strive.Client.WPF/App.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/App.xaml
@@ -1,7 +1,9 @@
 ﻿<Application x:Class="Strive.Client.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow.xaml"
+             Startup="Application_Startup"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
          
     </Application.Resources>
