Fixed dodgy icon issue and added nameplates

--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         Title="MainWindow" Height="600" Width="800" WindowState="Maximized"
-        Icon="file:///C:/git/Strive.NET/Source/Strive/Strive.Client/Strive.Client.WPF/Resources/App.ico"
+        Icon="/Strive.Client.WPF;component/App.ico"
         WindowStartupLocation="CenterScreen">
     <Window.CommandBindings>
         <CommandBinding Command="Close"
