--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-        Title="MainWindow" Height="600" Width="800" WindowState="Maximized"
+        Title="Strive" Height="600" Width="800" WindowState="Maximized"
         Icon="/Strive.Client.WPF;component/App.ico"
         WindowStartupLocation="CenterScreen">
     <Window.CommandBindings>
@@ -15,6 +15,12 @@
         <CommandBinding Command="New"
                         Executed="NewCmdExecuted"
                         CanExecute="NewCmdCanExecute"/>
+        <CommandBinding Command="Search"
+                        Executed="SearchCmdExecuted"
+                        CanExecute="SearchCmdCanExecute"/>
+        <CommandBinding Command="BrowseHome"
+                        Executed="BrowseHomeCmdExecuted"
+                        CanExecute="BrowseHomeCmdCanExecute"/>
     </Window.CommandBindings>
     <DockPanel Background="Transparent">
         <Menu DockPanel.Dock="Top">
@@ -28,9 +34,9 @@
         </Menu>
 
         <ToolBar Name="ButtonBar" DockPanel.Dock="top">
-            <Button>One</Button>
-            <Button>Two</Button>
-            <Button>Three</Button>
+            <Button Content="New View" Command="ApplicationCommands.New"></Button>
+            <Button Content="Show Units" Command="NavigationCommands.Search"></Button>
+            <Button Content="Home" Command="NavigationCommands.BrowseHome"></Button>
         </ToolBar>
 
         <StatusBar DockPanel.Dock="Bottom">
