--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-        Title="Strive" Height="600" Width="800" WindowState="Maximized"
+        Title="Strive Client" Height="600" Width="800" WindowState="Maximized"
         Icon="/Strive.Client.WPF;component/App.ico"
         WindowStartupLocation="CenterScreen">
     <Window.CommandBindings>
