--- a/Source/Strive/Strive.Server/Strive.Server.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Server/Strive.Server.WPF/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-        Title="{Binding Path=DisplayName}"
+        Title="Strive Server"
         Width="650" Height="420"
         WindowStartupLocation="CenterScreen" Icon="/Strive.Server.WPF;component/App.ico">
     <DockPanel>
