--- a/Source/Strive/Strive.WPF/View/ServerStatusView.xaml
+++ b/Source/Strive/Strive.WPF/View/ServerStatusView.xaml
@@ -1,9 +1,9 @@
-﻿<ad:DockableContent x:Class="Strive.WPF.View.ServerView"
+﻿<ad:DockableContent x:Class="Strive.WPF.View.ServerStatusView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-             Title="Server View" Height="300" Width="300">
+             Title="Server Status View" Height="300" Width="300">
     <DockPanel>
         <Label Content="Status:" Height="28" Name="label1" />
         <Label Content="Unknown" Height="28" Name="labelStatus" />
