--- a/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/WorldView.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.NeoAxisView/WorldView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-        xmlns:WPFAppFramework="clr-namespace:WPFAppFramework;assembly=WPFAppFramework"
+        xmlns:neo="clr-namespace:WPFAppFramework;assembly=WPFAppFramework"
         Title="World View" Height="300" Width="300">
-    <WPFAppFramework:RenderTargetUserControl Name="renderTargetUserControl1"/>
+    <neo:RenderTargetUserControl Name="r"/>
 </ad:DockableContent>
