Server now hosts within client

--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -37,10 +37,12 @@
             <Button Content="New View" Command="ApplicationCommands.New"></Button>
             <Button Content="Show Units" Command="NavigationCommands.Search"></Button>
             <Button Content="Home" Command="NavigationCommands.BrowseHome"></Button>
+            <Button Content="Log" Command="Open"></Button>
             <Button Content="Connect" Click="Button_Click"></Button>
             <Button Content="Browser" Click="Button_Click_1"></Button>
             <Button Content="FactoryView" Click="Button_Click_2"></Button>
             <Button Content="UnitView" Click="Button_Click_3"></Button>
+            <Button Content="Host" Click="Button_Click_4"></Button>
         </ToolBar>
 
         <StatusBar DockPanel.Dock="Bottom">
