--- a/Source/Strive/Strive.WPF/ResourceList.xaml
+++ b/Source/Strive/Strive.WPF/ResourceList.xaml
@@ -1,8 +1,8 @@
-﻿<ad:DockableContent x:Class="Strive.Client.WPF.ResourceList"
+﻿<ad:DockableContent x:Class="Strive.WPF.ResourceList"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
-        Title="Resource List" Height="300" Width="300" xmlns:my="clr-namespace:Strive.Client.WPF">
+        Title="Resource List" Height="300" Width="300">
     <ListView Name="listView1" ItemsSource="{Binding Entities}" IsSynchronizedWithCurrentItem="True">
         <ListView.Resources>
             <Style TargetType="{x:Type ListViewItem}">
