--- a/Source/Strive/Strive.WPF/ResourceList.xaml
+++ b/Source/Strive/Strive.WPF/ResourceList.xaml
@@ -3,6 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         Title="Resource List" Height="300" Width="300">
+    <ad:DockableContent.InputBindings>
+        
+    </ad:DockableContent.InputBindings>
     <ListView Name="listView1" ItemsSource="{Binding Entities}" IsSynchronizedWithCurrentItem="True">
         <ListView.Resources>
             <Style TargetType="{x:Type ListViewItem}">
