--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -43,6 +43,7 @@
             <Button Content="FactoryView" Click="Button_Click_2"></Button>
             <Button Content="UnitView" Click="Button_Click_3"></Button>
             <Button Content="Host" Click="Button_Click_4"></Button>
+            <Button Content="Chat" Click="Button_Click_5"></Button>
         </ToolBar>
 
         <StatusBar DockPanel.Dock="Bottom">
