--- a/Source/Strive/Strive.WPF/LogView.xaml
+++ b/Source/Strive/Strive.WPF/LogView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
+             xmlns:b="clr-namespace:Strive.WPF"
              Title="Log View" Height="300" Width="300">
     <Grid>
         <Grid.Resources>
@@ -21,6 +22,7 @@
         </Grid.Resources>
 
         <ListView Name="listView1" AlternationCount="3" ItemsSource="{Binding Path=LogModel.LogEntries}"
-                  ItemContainerStyle="{StaticResource alternatingWithBinding}"/>
+                  ItemContainerStyle="{StaticResource alternatingWithBinding}"
+                  b:ListBoxBehaviour.AutoCopy="True"/>
     </Grid>
 </ad:DockableContent>
