--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -35,13 +35,12 @@
 
         <ToolBar Name="ButtonBar" DockPanel.Dock="top">
             <Button Content="New View" Command="ApplicationCommands.New"></Button>
-            <Button Content="Show Units" Command="NavigationCommands.Search"></Button>
+            <Button Content="Entities" Command="NavigationCommands.Search"></Button>
+            <Button Content="Plans" Click="Button_Click_2"></Button>
             <Button Content="Home" Command="NavigationCommands.BrowseHome"></Button>
             <Button Content="Log" Command="Open"></Button>
             <Button Content="Connect" Click="Button_Click"></Button>
             <Button Content="Browser" Click="Button_Click_1"></Button>
-            <Button Content="FactoryView" Click="Button_Click_2"></Button>
-            <Button Content="UnitView" Click="Button_Click_3"></Button>
             <Button Content="Host" Click="Button_Click_4"></Button>
             <Button Content="Chat" Click="Button_Click_5"></Button>
             <Button Content="History" Click="Button_Click_6"></Button>
