--- a/Source/Strive/Strive.WPF/EntityListView.xaml
+++ b/Source/Strive/Strive.WPF/EntityListView.xaml
@@ -1,4 +1,4 @@
-﻿<ad:DockableContent x:Class="Strive.WPF.ResourceListView"
+﻿<ad:DockableContent x:Class="Strive.WPF.EntityListView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
