--- a/Source/Strive/Strive.WPF/PlanListView.xaml
+++ b/Source/Strive/Strive.WPF/PlanListView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         xmlns:b="clr-namespace:Strive.WPF"
-        Title="Resource List" Height="300" Width="300">
+        Title="Plan List" Height="300" Width="300">
     <ListView Name="listView1" ItemsSource="{Binding Plans}"
               IsSynchronizedWithCurrentItem="True"
               b:ListBoxBehaviour.AutoCopy="True">
