--- a/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
+++ b/Source/Strive/Strive.Client/Strive.Client.WPF/MainWindow.xaml
@@ -37,6 +37,7 @@
             <Button Content="New View" Command="ApplicationCommands.New"></Button>
             <Button Content="Entities" Command="NavigationCommands.Search"></Button>
             <Button Content="Plans" Click="Button_Click_2"></Button>
+            <Button Content="Tasks" Click="Button_Click_3"></Button>
             <Button Content="Home" Command="NavigationCommands.BrowseHome"></Button>
             <Button Content="Log" Command="Open"></Button>
             <Button Content="Connect" Click="Button_Click"></Button>
