--- a/Source/Strive/Strive.WPF/MissionListView.xaml
+++ b/Source/Strive/Strive.WPF/MissionListView.xaml
@@ -1,10 +1,10 @@
-﻿<ad:DockableContent x:Class="Strive.WPF.PlanListView"
+﻿<ad:DockableContent x:Class="Strive.WPF.MissionListView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         xmlns:b="clr-namespace:Strive.WPF"
-        Title="Plan List" Height="300" Width="300">
-    <ListView Name="listView1" ItemsSource="{Binding Plans}"
+        Title="Mission List" Height="300" Width="300">
+    <ListView Name="listView1" ItemsSource="{Binding Missions}"
               IsSynchronizedWithCurrentItem="True"
               b:ListBoxBehaviour.AutoCopy="True">
         <ListView.Resources>
