--- a/Source/Strive/Strive.WPF/TimeLineView.xaml
+++ b/Source/Strive/Strive.WPF/TimeLineView.xaml
@@ -3,5 +3,5 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:ad="clr-namespace:AvalonDock;assembly=AvalonDock"
         Title="Time Line" Height="300" Width="300">
-    <Slider Name="slider1" Minimum="1" Maximum="{Binding MaxVersion}" Value="{Binding CurrentVersion, Mode=TwoWay}" />
+    <Slider Name="slider1" Minimum="{Binding MinVersion}" Maximum="{Binding MaxVersion}" Value="{Binding CurrentVersion, Mode=TwoWay}" />
 </ad:DockableContent>
